--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-slider": "^2.0.6",
     "react-spinners": "^0.14.1",
     "sass": "^1.77.8",
     "tinymce": "^7.8.0"
@@ -33,6 +34,7 @@
     "@types/react": "^18.3.4",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
+    "@types/react-slider": "^1.3.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "i": "^0.3.7",
