--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-slider": "^2.0.6",
     "react-spinners": "^0.14.1",
     "sass": "^1.77.8",
+    "swr": "^2.3.3",
     "tinymce": "^7.8.0"
   },
   "devDependencies": {
