--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-pdf": "^10.2.0",
     "react-slider": "^2.0.6",
     "react-spinners": "^0.14.1",
     "sass": "^1.77.8",
