--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.7",
     "next-sitemap": "^4.2.3",
+    "pdfjs-dist": "^5.4.449",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
